tests/suppress/suppress.exp
Error --------------------------------------------------------------- A.js:16:21

Error: A.js:16
 16: var test4: string = 123; // This error is NOT suppressed
                         ^^^ Cannot assign `123` to `test4` because number [1] is incompatible with string [2].
  References:
   16: var test4: string = 123; // This error is NOT suppressed
                           ^^^ [1]: number
   16: var test4: string = 123; // This error is NOT suppressed
                  ^^^^^^ [2]: string

Error ---------------------------------------------------------- versions.js:7:2

Error: versions.js:7
  7: (123: string); // should not be suppressed
      ^^^ Cannot cast `123` to string because number [1] is incompatible with string [2].
  References:
    7: (123: string); // should not be suppressed
        ^^^ [1]: number
    7: (123: string); // should not be suppressed
             ^^^^^^ [2]: string

Warning -------------------------------------------------------------- A.js:14:1

Warning: A.js:14
 14: // $FlowFixMe Error unused suppression
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unused suppression comment.


Found 2 errors and 1 warning
